apps/production/jimswiki/jimswiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jimswiki
  namespace: jimswiki
spec:
  selector:
    app: jimswiki
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
